[gd_scene load_steps=12 format=3 uid="uid://rj8arc73s7oc"]

[ext_resource type="Script" path="res://levels/test_level.gd" id="1_q8vi7"]
[ext_resource type="Texture2D" uid="uid://bdtdquuh7ylch" path="res://temporary_assets/acad-oval-2-scaled.jpg" id="2_2l0nu"]
[ext_resource type="TileSet" uid="uid://uewiiqo77xfu" path="res://resources/test_tileset.tres" id="3_i3pby"]
[ext_resource type="PackedScene" uid="uid://cwtuskfpjx053" path="res://ui/player_hud.tscn" id="4_8vgmr"]
[ext_resource type="PackedScene" uid="uid://bx1ojieysbx4j" path="res://entities/enemy_turrets/enemy_ranged.tscn" id="7_ycumf"]
[ext_resource type="PackedScene" uid="uid://drqyrkt6rv3xv" path="res://entities/enemy_turrets/enemy_wisp.tscn" id="9_bmslb"]
[ext_resource type="Script" path="res://levels/respawn_points.gd" id="10_kvjb5"]
[ext_resource type="PackedScene" uid="uid://joqjjfdkp46b" path="res://levels/decor/campfire.tscn" id="11_s3svj"]
[ext_resource type="PackedScene" uid="uid://k3e86wyibwv8" path="res://entities/player.tscn" id="12_ilnyr"]
[ext_resource type="PackedScene" uid="uid://daul7ev5657p5" path="res://levels/level_camera.tscn" id="13_nuuan"]
[ext_resource type="Script" path="res://levels/level_camera.gd" id="14_y7rv0"]

[node name="test_level" type="Node2D"]
script = ExtResource("1_q8vi7")

[node name="very cursed" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.337255, 0.337255, 0.337255, 1)
position = Vector2(819, 219)
scale = Vector2(2.00547, 1.95841)
texture = ExtResource("2_2l0nu")

[node name="ground" type="TileMap" parent="."]
tile_set = ExtResource("3_i3pby")
format = 2
layer_0/tile_data = PackedInt32Array(-4390909, 65536, 0, -4390908, 65536, 0, -4390907, 65536, 0, -4390906, 65536, 0, -4390905, 65536, 0, -4390904, 65536, 0, -4390903, 65536, 0, -4390902, 65536, 0, -4390901, 65536, 0, -4390900, 65536, 0, -4390899, 65536, 0, -4390898, 65536, 0, -4390897, 65536, 0, -4390896, 65536, 0, -4390895, 65536, 0, -4390894, 65536, 0, -4390893, 65536, 0, -4390892, 65536, 0, -4390891, 65536, 0, -4390890, 65536, 0, -4390889, 65536, 0, -4390888, 65536, 0, -4390887, 65536, 0, -4390910, 0, 0, -4325374, 0, 1, -4259838, 0, 1, -4194302, 0, 1, -4128766, 0, 1, -4063230, 0, 1, -3997694, 0, 1, -3932158, 0, 1, -3866622, 0, 1, -3801086, 0, 1, -3735550, 0, 1, -3670014, 0, 1, -3604478, 0, 1, -3538942, 0, 1, -3473406, 0, 1, -3145741, 65536, 1, -3145740, 65536, 1, -3145739, 65536, 1, -3145738, 65536, 1, -3145737, 65536, 1, -3145736, 65536, 1, -3145735, 65536, 1, -3145734, 65536, 1, -3145733, 65536, 1, -3145732, 65536, 1, -3145731, 65536, 1, -3145730, 65536, 1, -3145729, 65536, 1, -3211264, 65536, 1, -3211263, 65536, 1, -3211262, 65536, 1, -3211261, 65536, 1, -3211260, 65536, 1, -3211259, 65536, 1, -3211258, 65536, 1, -3211257, 65536, 1, -3211256, 65536, 1, -3211255, 65536, 1, -3211254, 65536, 1, -3211253, 65536, 1, -3211252, 65536, 1, -3604477, 65536, 1, -3604476, 65536, 1, -3604475, 65536, 1, -3604474, 65536, 1, -3604473, 65536, 1, -3604472, 65536, 1, -3604471, 65536, 1, -3604470, 65536, 1, -3604469, 65536, 1, -3604468, 65536, 1, -3604467, 65536, 1, -3604466, 65536, 1, -3604465, 65536, 1, -3604464, 65536, 1, -3604463, 65536, 1, -3604462, 65536, 1, -3604461, 65536, 1, -3211251, 65536, 1, -3211250, 65536, 1, -3211249, 65536, 1, -3211248, 65536, 1, -3211247, 65536, 1, -3211246, 65536, 1, -3211245, 65536, 1, -3211244, 65536, 1, -3211243, 65536, 1, -3211242, 65536, 1, -3211241, 65536, 1, -3211240, 65536, 1, -3211239, 65536, 1, -3211238, 65536, 1, -3866599, 65536, 1, -3866600, 65536, 1, -3866601, 65536, 1, -3866602, 65536, 1, -3866603, 65536, 1, -3866604, 65536, 1, -3866605, 65536, 1, -3866606, 65536, 1, -3866607, 65536, 1, -3866608, 65536, 1, -3866609, 65536, 1, -4390886, 65536, 1, -4325350, 65536, 1, -4259814, 65536, 1, -4194278, 65536, 1, -4128742, 65536, 1, -3866598, 65536, 1, -3801062, 65536, 1, -3735526, 65536, 1, -3669990, 65536, 1, -3604454, 65536, 1, -3538918, 65536, 1, -3473382, 65536, 1, -3407846, 65536, 1, -3342310, 65536, 1, -3276774, 65536, 1, -3866597, 65536, 1, -3866596, 65536, 1, -3866595, 65536, 1, -3866594, 65536, 1, -3866593, 65536, 1, -3866592, 65536, 1, -3866575, 65536, 1, -3866576, 65536, 1, -3866577, 65536, 1, -3866578, 65536, 1, -3866579, 65536, 1, -3866580, 65536, 1, -3866581, 65536, 1, -3866582, 65536, 1, -3801046, 65536, 1, -3735510, 65536, 1, -3669974, 65536, 1, -3604438, 65536, 1, -3538902, 65536, 1, -3473366, 65536, 1, -3407830, 65536, 1, -3407831, 65536, 1, -3407832, 65536, 1, -3407833, 65536, 1, -3407834, 65536, 1, -3407835, 65536, 1, -3407836, 65536, 1, -3407837, 65536, 1, -3145702, 65536, 1, -3080166, 65536, 1, -3080165, 65536, 1, -3080164, 65536, 1, -3080163, 65536, 1, -3080162, 65536, 1, -3080161, 65536, 1, -3080160, 65536, 1, -3080159, 65536, 1, -3080158, 65536, 1, -3080157, 65536, 1, -3080156, 65536, 1, -3080155, 65536, 1, -4390885, 65536, 1, -4390884, 65536, 1, -4390883, 65536, 1, -4390882, 65536, 1, -4390881, 65536, 1, -4390880, 65536, 1, -4390879, 65536, 1, -4390878, 65536, 1, -4390877, 65536, 1, -4390876, 65536, 1, -4390875, 65536, 1, -4390874, 65536, 1, -4390873, 65536, 1, -4390872, 65536, 1, -4390871, 65536, 1, -4390870, 65536, 1, -4390869, 65536, 1, -4390868, 65536, 1, -4390867, 65536, 1, -4390866, 65536, 1, -4390865, 65536, 1, -4390864, 65536, 1, -4390863, 65536, 1, -4390862, 65536, 1, -4390861, 65536, 1, -4390860, 65536, 1, -4390859, 65536, 1, -4390858, 65536, 1, -4390857, 65536, 1, -4390856, 65536, 1, -4325320, 65536, 1, -4259784, 65536, 1, -4194248, 65536, 1, -4128712, 65536, 1, -4063176, 65536, 1, -3997640, 65536, 1, -3932104, 65536, 1, -3866568, 65536, 1, -3866569, 65536, 1, -3866570, 65536, 1, -3866571, 65536, 1, -3866572, 65536, 1, -3866573, 65536, 1, -3866574, 65536, 1, -3801032, 65536, 1, -3735496, 65536, 1, -3669960, 65536, 1, -3604424, 65536, 1, -3538888, 65536, 1, -3473352, 65536, 1, -3407816, 65536, 1, -3342280, 65536, 1, -3276744, 65536, 1, -3211208, 65536, 1, -3145672, 65536, 1, -3080136, 65536, 1, -3014600, 65536, 1, -2949064, 65536, 1, -2883528, 65536, 1, -2817992, 65536, 1, -2752456, 65536, 1, -2686920, 65536, 1, -2621384, 65536, 1, -2555848, 65536, 1, -2490312, 65536, 1, -2555849, 65536, 1, -2555850, 65536, 1, -2555851, 65536, 1, -2555852, 65536, 1, -2555853, 65536, 1, -2555854, 65536, 1, -2555855, 65536, 1, -2555856, 65536, 1, -2555857, 65536, 1, -2555858, 65536, 1, -3014630, 65536, 1, -2949094, 65536, 1, -2883558, 65536, 1, -2818022, 65536, 1, -2752486, 65536, 1, -2686950, 65536, 1, -2621414, 65536, 1, -2555878, 65536, 1, -2490342, 65536, 1, -2424806, 65536, 1, -2359270, 65536, 1, -2293734, 65536, 1, -2228198, 65536, 1, -2162662, 65536, 1, -2097126, 65536, 1, -2031590, 65536, 1, -1966054, 65536, 1, -2424776, 65536, 1, -2359240, 65536, 1, -2293704, 65536, 1, -2228168, 65536, 1, -2162632, 65536, 1, -2097096, 65536, 1, -2031560, 65536, 1, -1966024, 65536, 1, -1900488, 65536, 1, -1834952, 65536, 1, -1769416, 65536, 1, -1703880, 65536, 1, -1638344, 65536, 1, -1638345, 65536, 1, -1638346, 65536, 1, -1638347, 65536, 1, -1638348, 65536, 1, -1638349, 65536, 1, -1638350, 65536, 1, -1638351, 65536, 1, -1638352, 65536, 1, -1638353, 65536, 1, -1638354, 65536, 1, -1638355, 65536, 1, -1638356, 65536, 1, -1638357, 65536, 1, -1638358, 65536, 1, -1638359, 65536, 1, -1638360, 65536, 1, -1638361, 65536, 1, -1638362, 65536, 1, -1638363, 65536, 1, -1638364, 65536, 1, -1638365, 65536, 1, -1638366, 65536, 1, -1638367, 65536, 1, -1638368, 65536, 1, -1638369, 65536, 1, -1638370, 65536, 1, -1638371, 65536, 1, -1638372, 65536, 1, -1638373, 65536, 1, -1638374, 65536, 1, -1638375, 65536, 1, -1638376, 65536, 1, -1638377, 65536, 1, -1638378, 65536, 1, -1638379, 65536, 1, -1638380, 65536, 1, -1638381, 65536, 1, -1638382, 65536, 1, -1638383, 65536, 1, -1638384, 65536, 1, -1638385, 65536, 1, -1638386, 65536, 1, -1638387, 65536, 1, -1638388, 65536, 1, -1638389, 65536, 1, -1638390, 65536, 1, -1638391, 65536, 1, -2359271, 65536, 1, -2359272, 65536, 1, -2359273, 65536, 1, -2359274, 65536, 1, -2359275, 65536, 1, -2359276, 65536, 1, -2359277, 65536, 1, -2359278, 65536, 1, -2359279, 65536, 1, -2359280, 65536, 1, -2359281, 65536, 1, -2359282, 65536, 1, -2359283, 65536, 1, -2359284, 65536, 1, -2359285, 65536, 1, -2359286, 65536, 1, -2359287, 65536, 1, -2359288, 65536, 1, -2359289, 65536, 1, -2359290, 65536, 1, -2359291, 65536, 1, -2359292, 65536, 1, -2359293, 65536, 1, -2359294, 65536, 1, -2359295, 65536, 1, -2359296, 65536, 1, -2293760, 65536, 1, -2228224, 65536, 1, -2162688, 65536, 1, -2097152, 65536, 1, -2031616, 65536, 1, -1966080, 65536, 1, -1900544, 65536, 1, -1835008, 65536, 1, -1769472, 65536, 1, -1703936, 65536, 1, -1638400, 65536, 1, -1572864, 65536, 1, -1507328, 65536, 1, -1441792, 65536, 1, -1376256, 65536, 1, -1310720, 65536, 1, -1245184, 65536, 1, -1179648, 65536, 1, -1114112, 65536, 1, -1048576, 65536, 1, -1048575, 65536, 1, -1048574, 65536, 1, -1048573, 65536, 1, -1048572, 65536, 1, -1048571, 65536, 1, -1048570, 65536, 1, -1048569, 65536, 1, -1048568, 65536, 1, -1048567, 65536, 1, -1048566, 65536, 1, -1048565, 65536, 1, -1048564, 65536, 1, -1048563, 65536, 1, -1048562, 65536, 1, -1048561, 65536, 1, -1048560, 65536, 1, -1048559, 65536, 1, -1048558, 65536, 1, -1048557, 65536, 1, -1048556, 65536, 1, -1048555, 65536, 1, -1048554, 65536, 1, -1572840, 65536, 1, -1507304, 65536, 1, -1441768, 65536, 1, -1376232, 65536, 1, -1310696, 65536, 1, -1245160, 65536, 1, -1572813, 65536, 1, -1507277, 65536, 1, -1441741, 65536, 1, -1376205, 65536, 1, -1048553, 65536, 1, -1048552, 65536, 1, -1048551, 65536, 1, -1048550, 65536, 1, -1048549, 65536, 1, -1048548, 65536, 1, -1048547, 65536, 1, -1048546, 65536, 1, -1048545, 65536, 1, -1048544, 65536, 1, -1048543, 65536, 1, -1048542, 65536, 1, -1048541, 65536, 1, -1048540, 65536, 1, -1048539, 65536, 1, -1048538, 65536, 1, -1048537, 65536, 1, -1048536, 65536, 1, -1048535, 65536, 1, -1048534, 65536, 1, -1048533, 65536, 1, -1048532, 65536, 1, -1048531, 65536, 1, -1048530, 65536, 1, -1048529, 65536, 1, -1048528, 65536, 1, -1048527, 65536, 1, -1048526, 65536, 1, -1048525, 65536, 1, -1048524, 65536, 1, -1048523, 65536, 1, -1048522, 65536, 1, -1048521, 65536, 1, -1048520, 65536, 1, -1048519, 65536, 1, -1310669, 65536, 1, -2228197, 65536, 1, -2228196, 65536, 1, -2228195, 65536, 1, -2228194, 65536, 1, -1966045, 65536, 1, -1966044, 65536, 1, -1966043, 65536, 1, -1048518, 65536, 1, -1048517, 65536, 1, -1048516, 65536, 1, -1048515, 65536, 1, -1048514, 65536, 1, -1048513, 65536, 1, -1048512, 65536, 1, -1048511, 65536, 1, -1048510, 65536, 1, -1048509, 65536, 1, -1048508, 65536, 1, -1048507, 65536, 1, -1048506, 65536, 1, -1048505, 65536, 1, -1048504, 65536, 1, -1048503, 65536, 1, -1048502, 65536, 1, -1048501, 65536, 1, -1048500, 65536, 1, -1048499, 65536, 1, -1048498, 65536, 1, -1048497, 65536, 1, -1114033, 65536, 1, -1179569, 65536, 1, -1245105, 65536, 1, -1310641, 65536, 1, -1376177, 65536, 1, -1441713, 65536, 1, -1507249, 65536, 1, -1572785, 65536, 1, -1638321, 65536, 1, -1703857, 65536, 1, -1769393, 65536, 1, -1834929, 65536, 1, -1900465, 65536, 1, -1572786, 65536, 1, -1572787, 65536, 1, -1572788, 65536, 1, -1572789, 65536, 1, -1572790, 65536, 1, -1572791, 65536, 1, -1572792, 65536, 1, -1572793, 65536, 1, -1572794, 65536, 1, -1966001, 65536, 1, -2031537, 65536, 1, -2097073, 65536, 1, -2162609, 65536, 1, -2228145, 65536, 1, -2293681, 65536, 1, -2359217, 65536, 1, -2424753, 65536, 1, -2490289, 65536, 1, -2555825, 65536, 1, -2621361, 65536, 1, -2686897, 65536, 1, -2752433, 65536, 1, -2817969, 65536, 1, -2883505, 65536, 1, -2949041, 65536, 1, -3014577, 65536, 1, -1966023, 65536, 1, -1966022, 65536, 1, -1966021, 65536, 1, -1966020, 65536, 1, -1966019, 65536, 1, -1966018, 65536, 1, -1966017, 65536, 1, -1966016, 65536, 1, -1966015, 65536, 1, -1966014, 65536, 1, -1966013, 65536, 1, -1966012, 65536, 1, -1966011, 65536, 1, -1310656, 65536, 1, -1310655, 65536, 1, -1310654, 65536, 1, -1310653, 65536, 1, -2359218, 65536, 1, -2359219, 65536, 1, -2359220, 65536, 1, -2359221, 65536, 1, -2359222, 65536, 1, -2359223, 65536, 1, -2359224, 65536, 1, -2359225, 65536, 1, -2359226, 65536, 1, -2359227, 65536, 1, -2359228, 65536, 1, -2359229, 65536, 1, -2359230, 65536, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="player_hud" parent="CanvasLayer" instance=ExtResource("4_8vgmr")]

[node name="Node" type="Node" parent="."]

[node name="respawn_points" type="Node2D" parent="."]
script = ExtResource("10_kvjb5")

[node name="campfire" parent="respawn_points" instance=ExtResource("11_s3svj")]
position = Vector2(-147, -819)

[node name="player" parent="." instance=ExtResource("12_ilnyr")]
position = Vector2(-82, -1164)
respawn_point = Vector2(1148, 432)

[node name="level_camera" parent="player" node_paths=PackedStringArray("tilemap") instance=ExtResource("13_nuuan")]
zoom = Vector2(1, 1)
script = ExtResource("14_y7rv0")
tilemap = NodePath("../../ground")

[node name="Label_endoflvl" type="Label" parent="."]
offset_left = 1982.0
offset_top = -1144.0
offset_right = 2168.0
offset_bottom = -1118.0
text = "end of level. you win111"

[node name="enemies" type="Node" parent="."]

[node name="enemy_ranged" parent="enemies" instance=ExtResource("7_ycumf")]
position = Vector2(102, -840)

[node name="enemy_ranged2" parent="enemies" instance=ExtResource("7_ycumf")]
position = Vector2(239, -838)

[node name="enemy_wisp" parent="enemies" instance=ExtResource("9_bmslb")]
position = Vector2(277, -973)

[node name="enemy_wisp2" parent="enemies" instance=ExtResource("9_bmslb")]
position = Vector2(746, -974)

[node name="enemy_wisp3" parent="enemies" instance=ExtResource("9_bmslb")]
position = Vector2(475, -790)

[node name="enemy_ranged3" parent="enemies" instance=ExtResource("7_ycumf")]
position = Vector2(473, -502)

[node name="enemy_ranged4" parent="enemies" instance=ExtResource("7_ycumf")]
position = Vector2(475, -577)

[node name="enemy_ranged" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(676, -582)

[node name="enemy_ranged2" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(742, -805)

[node name="enemy_ranged3" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(427, -362)

[node name="enemy_ranged4" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(480, -362)

[node name="enemy_ranged5" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(529, -361)

[node name="enemy_ranged6" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(578, -360)

[node name="enemy_ranged7" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(633, -361)

[node name="enemy_ranged8" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(689, -360)

[node name="enemy_ranged9" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(747, -363)

[node name="enemy_ranged10" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(790, -367)

[node name="enemy_ranged11" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(40, -434)

[node name="enemy_ranged12" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(51, -294)

[node name="enemy_wisp" parent="." instance=ExtResource("9_bmslb")]
position = Vector2(381, -532)

[node name="enemy_wisp2" parent="." instance=ExtResource("9_bmslb")]
position = Vector2(309, -538)

[node name="enemy_ranged13" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(339, -354)

[node name="enemy_wisp3" parent="." instance=ExtResource("9_bmslb")]
position = Vector2(1149, -331)

[node name="enemy_wisp4" parent="." instance=ExtResource("9_bmslb")]
position = Vector2(1220, -326)

[node name="enemy_ranged14" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(939, -432)

[node name="enemy_wisp5" parent="." instance=ExtResource("9_bmslb")]
position = Vector2(1227, -407)

[node name="enemy_ranged15" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(1209, -461)

[node name="enemy_ranged16" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(1081, -529)

[node name="enemy_ranged17" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(930, -616)

[node name="enemy_ranged18" parent="." instance=ExtResource("7_ycumf")]
position = Vector2(1166, -607)
